welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: not found: type color
def faireV(c:color)
             ^MethodsPicture:25: error: not found: value c
{faireV(c); 
        ^